ref: 新增electron-builder打包构建

--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "pack": "electron-builder --dir",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^39.2.3"
+    "electron": "^39.2.3",
+    "electron-builder": "^26.0.12"
+  },
+  "build": {
+    "directories": {
+      "output": "dist"
+    },
+    "mac": {
+      "identity": false
+    }
   }
 }
