chore: 增加Windows系统构建配置

--- a/package.json
+++ b/package.json
@@ -21,6 +21,18 @@
     },
     "mac": {
       "identity": false
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
